Bug 231151 - ark: previewer doesn't differenciate a/test.png and b/test.png
Summary: ark: previewer doesn't differenciate a/test.png and b/test.png
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Unspecified
: NOR normal
Target Milestone: ---
Assignee: Harald Hvaal
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-17 21:40 UTC by Eckhart Wörner
Modified: 2010-05-09 02:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Example file which shows the problem (865 bytes, application/zip)
2010-03-17 21:41 UTC, Eckhart Wörner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eckhart Wörner 2010-03-17 21:40:53 UTC
Version:            (using KDE 4.4.1)
Installed from:    Debian testing/unstable Packages

This bug has been copied over from http://bugs.debian.org/cgi-bin/bugreport.cgi?bug= and has been verified to still exist in KDE SC 4.4.1

----

when opening an archive with png files aaa/file.png and
bbb/file.png, if after previewing aaa/file.png, i
preview bbb/file.png, then it shows me aaa/file.png

also, previewing bbb/file.png first will show me bbb/file.png
when previewing aaa/file.png

it seems to be specific to image previewing. it also fails with .jpg
but not with .txt.


step to reproduce :
mkdir a
mkdir b
import a/file.png # or whatever
import b/file.png # you want
zip test.zip a/file.png b/file.png
ark test.zip
click a/file.png : it shows a/file.png
click b/file.png : it shows a/file.png instead of b/file.png
Comment 1 Eckhart Wörner 2010-03-17 21:41:58 UTC
Created attachment 41720 [details]
Example file which shows the problem
Comment 2 Eckhart Wörner 2010-03-17 21:43:18 UTC
Corresponding Debian bug report is http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=533071
Comment 3 Raphael Kubo da Costa 2010-05-09 02:19:41 UTC
SVN commit 1124369 by rkcosta:

Preserve paths when extracting for preview.

This prevents files with same names but different paths in the archive
from ending up being interpreted as the same by caches implemented by
some KParts, for example.

CCBUG: 231151

 M  +8 -5      part.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1124369
Comment 4 Raphael Kubo da Costa 2010-05-09 02:25:24 UTC
SVN commit 1124370 by rkcosta:

Backport r1124369.

Preserve paths when extracting for preview.

This prevents files with same names but different paths in the archive
from ending up being interpreted as the same by caches implemented by
some KParts, for example.

BUG: 231151


 M  +8 -5      part.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1124370