Backport r1124369.

Preserve paths when extracting for preview.

This prevents files with same names but different paths in the archive
from ending up being interpreted as the same by caches implemented by
some KParts, for example.

BUG: 231151

svn path=/branches/KDE/4.4/kdeutils/ark/; revision=1124370